src/test/ui/async-await/multiple-lifetimes/ret-impl-trait-one.nll.stderr
error: lifetime may not live long enough
  --> $DIR/ret-impl-trait-one.rs:10:65
   |
LL | async fn async_ret_impl_trait1<'a, 'b>(a: &'a u8, b: &'b u8) -> impl Trait<'a> {
   |                                --  --                           ^^^^^^^^^^^^^^ opaque type requires that `'b` must outlive `'a`
   |                                |   |
   |                                |   lifetime `'b` defined here
   |                                lifetime `'a` defined here
   |
   = help: consider adding the following bound: `'b: 'a`

error: aborting due to previous error

